# minic

./: README.md  meson.build
clients/: meson.build
clients/common/: display.cpp  display.h  meson.build
clients/simple/: main.cpp  meson.build
src/: compositor.cpp  compositor.h  display.cpp  display.h  log.h  main.cpp  region.cpp  region.h  resource.cpp  resource.h  seat.cpp  seat.h  shell.cpp  shell.h  shm.cpp  shm.h  surface.cpp  surface.h
